--- a/components/DashboardHeader.module.scss
+++ b/components/DashboardHeader.module.scss
@@ -3,6 +3,9 @@
   width: 1440;
   height: 100;
   box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.04);
+  z-index: 50;
+  display: block;
+  position: relative;
 }
 
 .brandGroup {
