--- a/app/dashboard/page.module.scss
+++ b/app/dashboard/page.module.scss
@@ -10,6 +10,7 @@
 .header {
   display: flex;
   padding: 10px;
+  padding-top: 5%;
 }
 
 .metricsRow {
@@ -24,5 +25,5 @@
 
 .table {
   display: flex;
-  padding-top: 10px;
+  padding-top: 35px;
 }
