--- a/components/ui/Overlay.module.scss
+++ b/components/ui/Overlay.module.scss
@@ -1,14 +1,9 @@
 .container {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(230, 230, 230, 0.5); // Semi-transparent dark
+  inset: calc(var(--spacing) * 0);
+  background-color: rgba(192, 188, 188, 0.5); // Semi-transparent dark
   z-index: 30; // Higher than sidebar but lower than header
-  backdrop-filter: blur(0.5px); // Optional: subtle blur effect
+  backdrop-filter: blur(1px); // Optional: subtle blur effect
 
-  // Ensure it covers everything except header
-  margin-top: 100px; // Adjust based on your header height
-  height: calc(100vh - 100px);
+  // Ensure it covers everything except header // Adjust based on your header height
 }
