--- a/components/auth/Loginform.module.scss
+++ b/components/auth/Loginform.module.scss
@@ -12,7 +12,7 @@
 
 .input {
   width: 100%;
-  padding: 16px;
+  padding: 16px 14px;
   font-size: 14px;
   border-radius: 6px;
   border: 1px solid var(--border);
